--- a/config.example.ini
+++ b/config.example.ini
@@ -3,9 +3,33 @@
 ; @license: Copyright KentProjects
 ; @link: http://kentprojects.com
 ;
-[authentication]
+
 ; These are simply keys that are allowed to read from / write to the queue.
+[authentication]
 ; The API, obviously, because that's where items will be added from.
 api = 00a3b76189569a6119e834a2eae5e8cb
 ; And a Dashboard, since we may want to build stats from the queue.
 dashboard = dce78671db4249ba6b9822c80a00d1fb
+
+; Here could be a simple toggle-switch allowing handlers to be enabled & disabled.
+[handlers]
+; APNS - Apple Push Notification Service, for sending push notifications to iOS apps.
+apns = off
+; GCM - Google Cloud Messaging, for sending push notifications to Android apps.
+gcm = off
+; Postmark - Email API sender, for sending emails to inboxes.
+postmark = on
+
+; Here could be some settings for the handler, if required.
+[handler-apn]
+cert = apn/cert.pem
+key = apn/key.pem
+
+; Hey look, no settings for the GCM handler, because these settings are optional.
+; Although, let's be honest, there will be some settings. Keys and stuff.
+; Because GCM isn't insecure. In fact, it's quite the opposite.
+; BUT what I'm trying to demonstrate here is that these settings should be OPTIONAL.
+
+; And some more settings for another handler, again, if required.
+[handler-postmark]
+key = 54aabdb8e5399
